# omenLights

./: README.md  omen.pcapng  pyproject.toml
src/omenlights/: __init__.py  cli.py  controller.py  device.py  models.py  protocol.py
src/omenlights.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/omenlights/gui/: __init__.py  app.py  profiles.py  widgets.py
tests/: test_models_protocol.py
tools/: CAPTURE_GUIDE.md  PROTOCOL.md  decode_pcap.py
udev/: 70-omen-tracerled.rules
